profilelist1exp/unpackaged/objects/Partner_Type__c.object
<CustomObject>
    <fields>
        <fullName>Country__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>Enter the Country</inlineHelpText>
        <label>Country</label>
        <referenceTo>Country__c</referenceTo>
        <relationshipLabel>Partner Types</relationshipLabel>
        <relationshipName>Partner_Types</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Is_Active__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Uncheck to mark a partner type as inactive.</inlineHelpText>
        <label>Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Visible__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Is Visible</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Type_Name_Country__c</fullName>
        <caseSensitive>true</caseSensitive>
        <label>Partner Type Name_Country</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Sort_Order__c</fullName>
        <inlineHelpText>The Partner Type list will be sorted ascendingly in the Partner Direct Page.</inlineHelpText>
        <label>Sort Order</label>
        <precision>3</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Translated_Partner_Type_Name__c</fullName>
        <inlineHelpText>Enter the translated partner type name in the language of the country.</inlineHelpText>
        <label>Translated Partner Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Partner Type</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Translated_Partner_Type_Name__c</columns>
        <columns>Country__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Sort_Order__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>SonicWall</fullName>
        <columns>NAME</columns>
        <columns>Translated_Partner_Type_Name__c</columns>
        <columns>Country__c</columns>
        <columns>Is_Active__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Sonic</value>
        </filters>
        <label>SonicWall</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Technology_Partner</fullName>
        <columns>NAME</columns>
        <columns>Partner_Type_Name_Country__c</columns>
        <columns>Country__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Translated_Partner_Type_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>startsWith</operation>
            <value>Technology</value>
        </filters>
        <label>Technology Partner</label>
        <language>en_US</language>
    </listViews>
    <listViews>
        <fullName>Value_Added_Reseller</fullName>
        <columns>NAME</columns>
        <columns>Country__c</columns>
        <columns>Is_Active__c</columns>
        <columns>Partner_Type_Name_Country__c</columns>
        <columns>Sort_Order__c</columns>
        <columns>Translated_Partner_Type_Name__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>NAME</field>
            <operation>contains</operation>
            <value>Value</value>
        </filters>
        <label>Value Added Reseller</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Partner Type Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Partner Types</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>